# LumAPI

./: .gitignore  LumAPI_CLI.py  LumAPI_GUI.py  README.md  gener_stubs.py  install.md  pyproject.toml
.github/workflows/: build.yml  build_nuitka.yml  clean-old-artifacts.yml
LumAPI/: __init__.py  config.json  lumapi.py  lumapi.pyi  lumgenstubs.py
LumAPI_test/: __init__.py  cli.py  gui.py  lumapi.py
docs/: AngularSpectrum_Vector.md  Kirchhoff.md  Rayleigh-Sommerfeld_Scalar.md  Rayleigh-Sommerfeld_Vector.md  Rayleigh-Sommerfeld_Vector.py  menu.md  methods.md  usage.md
lumapi/: cli.py  gui.py
