[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LumAPI"
version = "1.0.1"
description = "Lumerical Python API 自动化配置工具"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
    "joblib",
    "tqdm"
]

# 定义命令行入口，分别指向文件夹内部的新脚本
[project.scripts]
LumAPI = "LumAPI.gui:main"
LumAPI_CLI = "LumAPI.cli:main"

[tool.setuptools]
# 明确指定只包含名为 LumAPI 的文件夹
packages = ["LumAPI"]

[tool.setuptools.package-data]
# 确保 config.json 被包含在内
LumAPI = ["*.json"]

# 排除根目录下的旧脚本
[tool.setuptools.exclude-package-data]
"*" = ["LumAPI_GUI.py", "LumAPI_CLI.py"]