[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LumAPI"
version = "1.1.6"
authors = [
    {name = "JaniQuiz", email = "janiquiz@163.com"},
]
maintainers = [
    {name = "JaniQuiz", email = "janiquiz@163.com"},
]
description = "Lumerical Python API 自动化配置工具"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["lumerical", "fdtd", "janiquiz", "lumapi"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
    "joblib",
    "scipy",
    "h5py",
    "tqdm"
]

# 定义命令行入口，分别指向文件夹内部的新脚本
[project.scripts]
LumAPI = "LumAPI.gui:main"
LumAPI_CLI = "LumAPI.cli:main"
LumGenStubs = "LumAPI.lumgenstubs:main"

[tool.setuptools]
# 明确指定只包含名为 LumAPI 的文件夹
packages = ["LumAPI"]

[tool.setuptools.package-data]
# 确保 config.json 被包含在内
LumAPI = ["*.json"]

# 排除根目录下的旧脚本
[tool.setuptools.exclude-package-data]
"*" = ["LumAPI_GUI.py", "LumAPI_CLI.py", "gener_stubs.py", "test*"]

[project.urls]
Homepage = "https://github.com/JaniQuiz/LumAPI"
Documentation = "https://github.com/JaniQuiz/LumAPI/blob/main/docs/usage.md"
Repository = "https://github.com/JaniQuiz/LumAPI"
Issues = "https://github.com/JaniQuiz/LumAPI/issues"
